--- a/lastDay.css
+++ b/lastDay.css
@@ -16,28 +16,30 @@ body{
 }
 
 .firstSectionTitle {
-    padding-top: 15px; 
+    padding-top: 4px; 
     margin: 0;
 }
 
 .bigContainer {
     padding: 0;
+    /* height: 0; */
     margin: 0;
     width: 100%;
 }
 
 .nav-bar {
-    translate: -100% 0;
-    min-height: 50vh;
+    translate: 0 -100%;
     position: absolute;
     z-index: 20;
     color: white;   
     padding-top: 0;
-    width: 50%;
-    background-color: rgb(228, 218, 218);
+    width: 100%;
+    /* background-color: #2e313e; */
+    background: url(Assets/istockphoto-184321485-1024x1024.jpg) no-repeat fixed center;
+    background-size: cover;
     padding-right: 60px;
     margin-top: 0;
-    transition: all .7s;
+    transition: all .7s ease-in-out;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -47,7 +49,8 @@ body{
     width: 90px;  
     margin: 0;  
     margin-left: 2.3rem; 
-    padding: 0 auto;
+    padding: 1rem auto;
+    margin-top: 1.2rem;
 }
 
 li {
@@ -64,7 +67,7 @@ li:hover {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    gap: 20px;
+    gap: 2px;
 }
 
 a {
@@ -210,6 +213,7 @@ img {
     }
     .nav-bar {
         color: white;  
+        background: none;
         background-color: #3f4147;
         opacity: .8;
         min-height: 0;
